--- a/.github/workflows/node_coveralls.js.yml
+++ b/.github/workflows/node_coveralls.js.yml
@@ -3,30 +3,33 @@ name: Node and Coveralls
 on: ["push", "pull_request"]
 
 jobs:
-  build_test:
+  test:
     name: Build and test
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x]
 
     steps:
+    
+    - name: Clone repository
     - uses: actions/checkout@v3
     
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Set Node.js version as ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'    
+        cache: 'npm'
+      
+    - name: Install npm dependencies
     - run: npm ci
-    - run: npm run build --if-present
+    
+    - name: Run tests
     - run: npm test
     
-    - name: npm install, make test-coverage
-      run: |
-        npm install
-        make test-coverage
+    - name: Make test-coverage
+      run: make test-coverage
     
     - name: Coveralls
       uses: coverallsapp/github-action@master
