--- a/.github/workflows/node_coveralls.js.yml
+++ b/.github/workflows/node_coveralls.js.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     
     - name: Clone repository
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     
     - name: Set Node.js version as ${{ matrix.node-version }}
       uses: actions/setup-node@v3
@@ -23,10 +23,10 @@ jobs:
         cache: 'npm'
       
     - name: Install npm dependencies
-    - run: npm ci
+      run: npm ci
     
     - name: Run tests
-    - run: npm test
+      run: npm test
     
     - name: Make test-coverage
       run: make test-coverage
