--- a/.github/workflows/node_coveralls.js.yml
+++ b/.github/workflows/node_coveralls.js.yml
@@ -23,7 +23,7 @@ jobs:
         cache: 'npm'
       
     - name: Install npm dependencies
-      run: npm ci
+      run: npm install
     
     - name: Run tests
       run: npm test
