--- a/.github/workflows/node_coveralls.js.yml
+++ b/.github/workflows/node_coveralls.js.yml
@@ -28,10 +28,6 @@ jobs:
     - name: Run tests
       run: npm test
     
-    - name: Make test-coverage
-      run: make test-coverage
-    
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@1.1.3
+
