--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "sum.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage && coveralls < coverage/lcov.info"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "coveralls": "^3.1.1",
     "jest": "^29.1.2"
   }
 }
