--- a/.github/workflows/node_coveralls.js.yml
+++ b/.github/workflows/node_coveralls.js.yml
@@ -1,35 +1,27 @@
-name: Node and Coveralls
-
 on: ["push", "pull_request"]
 
+name: Test Coveralls
+
 jobs:
-  test:
-    name: Build and test
+
+  build:
+    name: Build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
     steps:
-    
-    - name: Clone repository
-      uses: actions/checkout@v3
-    
-    - name: Set Node.js version as ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+
+    - uses: actions/checkout@v1
+
+    - name: Use Node.js 10.x
+      uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-      
-    - name: Install npm dependencies
-      run: npm install
-    
-    - name: Run tests and coverage
-      run: npm test
-    
-    - name: Coveralls GitHub Action
-      uses: coverallsapp/github-action@1.1.3
+        node-version: 10.x
+
+    - name: npm install, make test-coverage
+      run: |
+        npm install
+        make test-coverage
+
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-
