--- a/.github/workflows/node_coveralls.js.yml
+++ b/.github/workflows/node_coveralls.js.yml
@@ -3,20 +3,34 @@ on: ["push", "pull_request"]
 name: Test Coveralls
 
 jobs:
-
   build:
-    name: Build
+    name: Build and test
     runs-on: ubuntu-latest
+
     steps:
-
-    - uses: actions/checkout@v1
-
+    
+    - name: Clone repository
+      uses: actions/checkout@v3
+      
     - name: Use Node.js 10.x
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-
-    - name: Coveralls
+    
+    # - name: Set Node.js version as ${{ matrix.node-version }}
+    #   uses: actions/setup-node@v3
+    #   with:
+    #     node-version: ${{ matrix.node-version }}
+    #     cache: 'npm'
+      
+    - name: Install npm dependencies
+      run: npm install
+    
+    - name: Run tests and coverage
+      run: npm test
+    
+    - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+
